# pyRMG

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
examples/run_directory/: submit_matsemble_pyrmg.sh
examples/run_directory/Bi2Se3/: CONTCAR
examples/run_directory/inputs/: frontier_rmg.sh  vdW_full_relaxation.yml
examples/submission_templates/Flux/Frontier/: submit_matsemble_pyrmg.sh
examples/submission_templates/Flux/Perlmutter/: submit_matsemble_pyrmg.sh
examples/submission_templates/chained_jobs/Frontier/: frontier_chained.sh
examples/submission_templates/single_job/Frontier/: frontier_rmg.sh
examples/submission_templates/single_job/Perlmutter/: perlmutter_rmg.sh
examples/yamls/: spin_orbit_single_point.yml  vdW_full_relaxation.yml
pyRMG/: config_pyrmg_cli.py  convergence.py  forcefield.py  generate_pyrmg_cli.py  load_config.py  matsemble_pyrmg_cli.py  processor_grid.py  rmg_input.py  rmg_log.py  submit_pyrmg_cli.py  submitter.py  valence.py
submission_templates/Flux/Frontier/: submit_matsemble_pyrmg.sh
yamls/: vdW_partial_no_cell_relax.yml  vdW_relaxation.yml  vdW_single_point.yml
